completed the events multiple elements section

--- a/index.html
+++ b/index.html
@@ -24,37 +24,9 @@ Life finds a way. God creates dinosaurs. God destroys dinosaurs. God creates Man
 <p>
 I gave it a cold? I gave it a virus. A computer virus. So you two dig up, dig up dinosaurs? This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows. Yes, Yes, without the oops! You know what? It is beets. I've crashed into a beet truck.
 </p>
-<!-- <h3>Jeffsum</h3>
-<p>
-Do you have any idea how long it takes those cups to decompose. Did he just throw my cat out of the window? You really think you can fly that thing? Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
-</p>
-<h3>Jeffsum</h3>
-<p>
-You know what? It is beets. I've crashed into a beet truck. Jaguar shark! So tell me - does it really exist? We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
-</p>
-<h3>Jeffsum</h3>
-<p>
-What do they got in there? King Kong? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? Must go faster. Forget the fat lady! You're obsessed with the fat lady! Drive us out of here! Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
-</p>
-<h3>Jeffsum</h3>
-<p>
-What do they got in there? King Kong? Yes, Yes, without the oops! Is this my espresso machine? Wh-what is-h-how did you get my espresso machine? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager? Did he just throw my cat out of the window?
-</p>
-<h3>Jeffsum</h3>
-<p>
-Forget the fat lady! You're obsessed with the fat lady! Drive us out of here! Is this my espresso machine? Wh-what is-h-how did you get my espresso machine? God help us, we're in the hands of engineers. They're using our own satellites against us. And the clock is ticking.
-</p>
-<h3>Jeffsum</h3>
-<p>
-Hey, you know how I'm, like, always trying to save the planet? Here's my chance. You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager? We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
-</p>
-<h3>Jeffsum</h3>
-<p>
-Checkmate... Just my luck, no ice. You really think you can fly that thing? Remind me to thank John for a lovely weekend. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should. I was part of something special.
-</p> -->
 
-
-
+<h1 class="pac">Pick a color</h1>
+<section id="boxes"></section>
 
   <script src="script.js"></script>
 </body>
