completed the events multiple elements section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@ I gave it a cold? I gave it a virus. A computer virus. So you two dig up, dig up
 <h1 class="pac">Pick a color</h1>
 <section id="boxes"></section>
 
+<input id="username" placeholder="username" type="text">
+
+<input type="text" id="addItem" placeholder="food">
+<ul id="items"></ul>
+
   <script src="script.js"></script>
 </body>
 </html>
